修复动画不播放的问题